tests/integration/screens/snapshots/r#mod__integration__screens__analytics_screen_test__analytics_screen_snapshot_languages.snap
---
source: tests/integration/screens/analytics_screen_test.rs
expression: output
---
┌GitType Analytics─────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  Performance Analytics                                                                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Views─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  Overview | Trends | Repositories | Languages                                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Languages─────────────────────────────────────┐┌Language Details (Last 90 Days)───────────────────────────────────────┐
│► Rust                          340.0 CPM (20↑││  Language: Rust                                                      │
│  Python                        300.0 CPM (15█││                                                                      │
│                                             █││  📈  Speed Metrics:                                                   │
│                                             █││    • Average CPM: 340.0                                              │
│                                             █││    • Average WPM: 68.0                                               │
│                                             █││    • Best CPM: 380.0                                                 │
│                                             █││                                                                      │
│                                             █││  🎯  Accuracy & Quality:                                              │
│                                             █││    • Average Accuracy: 94.0%                                         │
│                                             █││    • Best Accuracy: 97.0%                                            │
│                                             █││    • Total Mistakes: 30                                              │
│                                             █││                                                                      │
│                                             █││  📊  Volume & Activity:                                               │
│                                             █││    • Total Sessions: 5                                               │
│                                             █││    • Total Keystrokes: 500                                           │
│                                             █││    • Total Time: 0h 0m                                               │
│                                             █││                                                                      │
│                                             █││  🏆  Progress:                                                        │
│                                             █││    • Average Score: 480                                              │
│                                             █││    • Total Stages: 15/20 completed                                   │
│                                             █││                                                                      │
│                                             █││                                                                      │
│                                             █││                                                                      │
│                                             █││                                                                      │
│                                             █││                                                                      │
│                                             █││                                                                      │
│                                             █││                                                                      │
│                                             █││                                                                      │
│                                             █││                                                                      │
│                                             ║││                                                                      │
│                                             ↓││                                                                      │
└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
                             [←→/HL] Switch View  [↑↓/JK] Navigate  [R] Refresh  [ESC] Back
