tests/integration/screens/snapshots/r#mod__integration__screens__analytics_screen_test__analytics_screen_snapshot_overview.snap
---
source: tests/integration/screens/analytics_screen_test.rs
expression: output
---
┌GitType Analytics─────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  Performance Analytics                                                                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Views─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  Overview | Trends | Repositories | Languages                                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Overview (Last 7 days)────────────────────────────────────────────────────────────────────────────────────────────────┐
│                       Sessions: 10  │  Avg CPM: 350.0  │  Best CPM: 400.0  │  Avg Accuracy: 95.0%                    │
│                   Total Time: 1.0h  │  Avg Session: 6.0m  │  Total Mistakes: 50  │  Repositories: 2                  │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Recent Activity───────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                      │
│  No recent activity - start typing to see your activity chart!                                                       │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Top Repositories (Last 90 Days)───────────────────────────┐┌Top Languages (Last 90 Days)──────────────────────────────┐
│  1. test/repo1                                350.0 CPM  ││  1. Rust                                      340.0 CPM  │
│  2. test/repo2                                300.0 CPM  ││  2. Python                                    300.0 CPM  │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
                             [←→/HL] Switch View  [↑↓/JK] Navigate  [R] Refresh  [ESC] Back
