tests/integration/screens/snapshots/r#mod__integration__screens__analytics_screen_test__analytics_screen_snapshot_overview_empty.snap
---
source: tests/integration/screens/analytics_screen_test.rs
expression: output
---
┌GitType Analytics─────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  Performance Analytics                                                                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Views─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  Overview | Trends | Repositories | Languages                                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Overview (Last 7 days)────────────────────────────────────────────────────────────────────────────────────────────────┐
│                          Sessions: 0  │  Avg CPM: 0.0  │  Best CPM: 0.0  │  Avg Accuracy: 0.0%                       │
│                   Total Time: 0.0h  │  Avg Session: 0.0m  │  Total Mistakes: 0  │  Repositories: 0                   │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Recent Activity───────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                      │
│  No recent activity - start typing to see your activity chart!                                                       │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Top Repositories (Last 90 Days)───────────────────────────┐┌Top Languages (Last 90 Days)──────────────────────────────┐
│No repository data available                              ││No language data available                                │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
                             [←→/HL] Switch View  [↑↓/JK] Navigate  [R] Refresh  [ESC] Back
