tests/integration/screens/snapshots/r#mod__integration__screens__analytics_screen_test__analytics_screen_snapshot_overview_with_activity.snap
---
source: tests/integration/screens/analytics_screen_test.rs
expression: output
---
┌GitType Analytics─────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  Performance Analytics                                                                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Views─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  Overview | Trends | Repositories | Languages                                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Overview (Last 7 days)────────────────────────────────────────────────────────────────────────────────────────────────┐
│                       Sessions: 35  │  Avg CPM: 350.0  │  Best CPM: 400.0  │  Avg Accuracy: 95.0%                    │
│                   Total Time: 3.5h  │  Avg Session: 6.0m  │  Total Mistakes: 50  │  Repositories: 2                  │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Recent Activity - 38 Days | 35 Total Sessions | Max: 8/Day────────────────────────────────────────────────────────────┐
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 01 02 03 04 05 06 07 08 09 10 11 12 13 14 15 16 17 18 19 20 21 22     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Top Repositories (Last 90 Days)───────────────────────────┐┌Top Languages (Last 90 Days)──────────────────────────────┐
│  1. test/repo1                                350.0 CPM  ││  1. Rust                                      340.0 CPM  │
│  2. test/very-long-repository-name-that-sho...300.0 CPM  ││  2. VeryLongLanguageNameThatShouldBeTrunc...  300.0 CPM  │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
                             [←→/HL] Switch View  [↑↓/JK] Navigate  [R] Refresh  [ESC] Back
