tests/integration/screens/snapshots/r#mod__integration__screens__analytics_screen_test__analytics_screen_snapshot_repositories.snap
---
source: tests/integration/screens/analytics_screen_test.rs
expression: output
---
┌GitType Analytics─────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  Performance Analytics                                                                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Views─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  Overview | Trends | Repositories | Languages                                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Repositories──────────────────────────────────┐┌Repository Details (Last 90 Days)─────────────────────────────────────┐
│► test/repo1                         350.0 CP↑││  Repository: test/repo1                                              │
│  test/repo2                         300.0 CP█││                                                                      │
│                                             █││  📈  Speed Metrics:                                                   │
│                                             █││    • Average CPM: 350.0                                              │
│                                             █││    • Average WPM: 70.0                                               │
│                                             █││    • Best CPM: 400.0                                                 │
│                                             █││                                                                      │
│                                             █││  🎯  Accuracy & Quality:                                              │
│                                             █││    • Average Accuracy: 95.0%                                         │
│                                             █││    • Best Accuracy: 98.0%                                            │
│                                             █││    • Total Mistakes: 50                                              │
│                                             █││                                                                      │
│                                             █││  📊  Volume & Activity:                                               │
│                                             █││    • Total Sessions: 10                                              │
│                                             █││    • Total Keystrokes: 1000                                          │
│                                             █││    • Total Time: 0h 1m                                               │
│                                             █││                                                                      │
│                                             █││  🏆  Progress:                                                        │
│                                             █││    • Average Score: 500                                              │
│                                             █││    • Total Stages: 8/10 completed                                    │
│                                             █││                                                                      │
│                                             █││                                                                      │
│                                             █││                                                                      │
│                                             █││                                                                      │
│                                             █││                                                                      │
│                                             █││                                                                      │
│                                             █││                                                                      │
│                                             █││                                                                      │
│                                             █││                                                                      │
│                                             ║││                                                                      │
│                                             ↓││                                                                      │
└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
                             [←→/HL] Switch View  [↑↓/JK] Navigate  [R] Refresh  [ESC] Back
